[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyOMA-Monitoring"
version = "0.1.0a1"
description = "Structural Monitoring with pyOMA"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Marwitz", email = "25247720+simonmarwitz@users.noreply.github.com" },
    { name = "Volkmar Zabel" },
]
keywords = ["structural dynamics", "modal analysis", "OMA", "system identification", "SHM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pytz",
    "tzlocal",
    "xarray",
    "python-dateutil",
    "simpleflock",
    "h5netcdf",
    "netcdf4",
    "h5py",
    "pyyaml",
    "pyOMA @ git+https://github.com/pyOMA-dev/pyOMA.git",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-nb",
    "sphinx-copybutton",
]

[tool.setuptools]
py-modules = ["monitoring", "daily", "config", "gantner_reader", "fbg_strain_reader", "post_processing", "time_convention", "site_tower", "site_example", "MultiLock"]
